dbTier/db-chart/templates/db-ingress-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-allow
spec:
  podSelector:
    matchLabels:
      app: app-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: presentation
    - podSelector:
        matchLabels:
          app: db-tier
  egress:
  - to:
    - podSelector:
        matchLabels:
            app: presentation
    - podSelector:
        matchLabels:
            app: db-tier
